--- a/index.html
+++ b/index.html
@@ -2,29 +2,8 @@
 <html>
 <head>
    <title>Css Generator</title>
-   <style type="text/css">
-   *{    margin: 0;    padding: 0;}
-   body,html{    height: 100%;    background: #212121; overflow:hidden;}
-   .window {    height: 100%;}
-   .window .toolbar {    height: 5%;}
-   .window .toolbar .css_selector {    background-color: #5F5D5D;    float: left;    height: 100%;    border: none;    width: 50%;}
-   .window .toolbar button {
-      background: #ac7d3e;
-      float: right;
-      border: none;
-      height: 100%;
-      padding: 10px;
-      line-height: 0;
-      color: white;
-      border-right: solid 1px #212121;
-   }
-   .window .panel_left {    height: 95%;    float: left;    width: 50%;}
-   .window .panel_left pre{height:100%;}
-   /*.window .panel_left textarea {    border: solid 1px #504F4F;    color: #199219;    background: black;    width: 100%;    height: 100%;}*/
-   .window .panel_right {    height: 95%;    float: left;    width: 50%;}
-   .window .panel_right pre {    background: #1D1D1D;    height: 100%;    overflow: auto;    color: #E49300;}
-   .window .clear {}
-   </style>
+   <link rel="stylesheet" type="text/css" href="./src/css/blaze.css">
+   <link rel="stylesheet" type="text/css" href="./src/css/main.css">
 
    <!-- Insert this line above script imports  -->
    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
@@ -40,6 +19,17 @@
 <body>
 
    <div class="window">
+
+      <div class="prompt">
+         <div class="title"></div>
+         <div class="input">
+            <input type="text"/>
+         </div>
+         <div class="buttons">
+            <button></button>
+         </div>
+      </div>
+
       <div class="toolbar">
          <button class="generate">Generate CSS</button>
          <button class="open">Open ...</button>
